--- a/conclusion.tex
+++ b/conclusion.tex
@@ -62,7 +62,9 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 TODO TODO At the end, the author would like to express his concern about the efficiency and practical impact of the metamaterial research in the last years. 
 The number of papers related to metamaterials has rocketed in the last decade in almost unprecedented way % todo cite some MM scientometry here
 , and 
-the hypertrophic number of publications dissolves the concentration of pertinent ideas in almost a homeopatic way. Perhaps anybody interested in MM will soon notice there are many papers adding just a quantitative difference to what was already published, often without stating this important fact. This may give a superficial feeling of an exponential gathering of knowledge, but in fact it mostly contributes to the information noise. 
+the hypertrophic number of publications dissolves the concentration of pertinent ideas in almost a homeopatic way.  
+Perhaps anybody interested in MM will soon notice there are many papers adding just a quantitative difference to what was already published, often without stating this important fact. This may give a superficial feeling of an exponential gathering of knowledge, but in fact it mostly contributes to the information noise. 
+In addition, the MM-related books available are often composed of ordinary papers, unrelated to each other and not covering all necessary theory, thus hardly preparing the reader to study the literature.
 
 %The name of this chapter is borrowed from the same-named book by Ben Munk \cite{Munk2004}. The book presents several objections against MM that seem to be ill-argumented and some of them seem to be also utterly wrong. 
 %However, as another point it also touches a really deep problem: 
