--- a/fdphd.bib
+++ b/fdphd.bib
@@ -653,6 +653,22 @@ j%% TODO understand what this is about
   year={1968},
   publisher={Turpion Ltd}
 }
+@article{vanwolleghem2009unidirectional,
+  title={Unidirectional band gaps in uniformly magnetized two-dimensional magnetophotonic crystals},
+  author={Vanwolleghem, Mathias and Checoury, Xavier and {\'S}migaj, Wojciech and Gralak, Boris and Magdenko, Liubov and Postava, Kamil and Dagens, B{\'e}atrice and Beauvillain, Pierre and Lourtioz, Jean-Michel},
+  journal={Physical Review B},
+  volume={80},
+  number={12},
+  pages={121102},
+  year={2009},
+  publisher={APS}
+}
+
+
+
+
+
+
 /*}}}*/
 % -- Dielectric metamaterials --/*{{{*/
 @article{peng2007,
