--- a/fdphd.bib
+++ b/fdphd.bib
@@ -592,7 +592,19 @@ j%% TODO understand what this is about
 % ZamudioLara 2006 Characterisation of metal diel PhCs
 
 % % == Photonic crystals ==
-% Yeh 1976 ELMG in periodic media Uses unfolded KOmega
+@article{yeh1977electromagnetic,
+  title={Electromagnetic propagation in periodic stratified media. I. General theory},
+  author={Yeh, Pochi and Yariv, Amnon and Hong, Chi-Shain},
+  journal={JOSA},
+  volume={67},
+  number={4},
+  pages={423--438},
+  year={1977},
+  publisher={Optical Society of America}
+}
+
+
+
 % Zengerle 1987
 %  -- PhC containing resonators (ad Monsoriu) --/*{{{*/
 @article{laktionov2008,
