--- a/fdphd.bib
+++ b/fdphd.bib
@@ -592,6 +592,7 @@ j%% TODO understand what this is about
 % ZamudioLara 2006 Characterisation of metal diel PhCs
 
 % % == Photonic crystals ==
+% /*{{{*/
 @article{yeh1977electromagnetic,
   title={Electromagnetic propagation in periodic stratified media. I. General theory},
   author={Yeh, Pochi and Yariv, Amnon and Hong, Chi-Shain},
@@ -602,7 +603,24 @@ j%% TODO understand what this is about
   year={1977},
   publisher={Optical Society of America}
 }
-
+@article{vanwolleghem2009unidirectional,
+  title={Unidirectional band gaps in uniformly magnetized two-dimensional magnetophotonic crystals},
+  author={Vanwolleghem, Mathias and Checoury, Xavier and {\'S}migaj, Wojciech and Gralak, Boris and Magdenko, Liubov and Postava, Kamil and Dagens, B{\'e}atrice and Beauvillain, Pierre and Lourtioz, Jean-Michel},
+  journal={Physical Review B},
+  volume={80},
+  number={12},
+  pages={121102},
+  year={2009},
+  publisher={APS}
+}
+@article{johnson2003introduction,
+  title={Introduction to photonic crystals: Bloch’s theorem, band diagrams, and gaps (but no defects)},
+  author={Johnson, Steven G and Joannopoulos, John D},
+  journal={Photonic Crystal Tutorial},
+  pages={1--16},
+  year={2003}
+}
+% /*}}}*/
 
 
 % Zengerle 1987
@@ -664,16 +682,6 @@ j%% TODO understand what this is about
   pages={509--514},
   year={1968},
   publisher={Turpion Ltd}
-}
-@article{vanwolleghem2009unidirectional,
-  title={Unidirectional band gaps in uniformly magnetized two-dimensional magnetophotonic crystals},
-  author={Vanwolleghem, Mathias and Checoury, Xavier and {\'S}migaj, Wojciech and Gralak, Boris and Magdenko, Liubov and Postava, Kamil and Dagens, B{\'e}atrice and Beauvillain, Pierre and Lourtioz, Jean-Michel},
-  journal={Physical Review B},
-  volume={80},
-  number={12},
-  pages={121102},
-  year={2009},
-  publisher={APS}
 }
 
 
