additions from papers

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -53,6 +53,8 @@ In the author's opinion, a great conceptual breakthrough would be needed to over
 %}}}
 \subsection{Metamaterials and sensing}%{{{
 %}}}
+%% + TODO Negative Casimir force
+%% http://journals.aps.org/prl/abstract/10.1103/PhysRevLett.105.189301
 \subsection{Metasurfaces, compact antennas and impedance engineering}%{{{
 \paragraph{}
 %}}}
