--- a/fdphd.bib
+++ b/fdphd.bib
@@ -504,6 +504,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={2204},
   year={2011}
 }
+@article{sihvola2009metamaterials,
+  title={Metamaterials: a personal view},
+  author={Sihvola, Ari},
+  journal={Radioengineering},
+  volume={18},
+  number={2},
+  pages={90--94},
+  year={2009}
+}
+
 /*}}}*/
 %  -- Homogenisation and Fresnel inversion --/*{{{*/
 
@@ -623,7 +633,20 @@ j%% TODO understand what this is about
 % /*}}}*/
 
 
-% Zengerle 1987
+@article{zengerle1987light,
+  title={Light propagation in singly and doubly periodic planar waveguides},
+  author={Zengerle, R},
+  journal={Journal of modern optics},
+  volume={34},
+  number={12},
+  pages={1589--1617},
+  year={1987},
+  publisher={Taylor \& Francis}
+}
+
+
+
+
 %  -- PhC containing resonators (ad Monsoriu) --/*{{{*/
 @article{laktionov2008,
   title={Mechanism of formation of band gaps in one-dimensional photonic quasi-crystals},
@@ -1488,8 +1511,6 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2007},
   publisher={Springer}
 }
-
-
 @book{landau1984electrodynamics,
   title={Electrodynamics of continuous media},
   author={Landau, Lev Davidovich and Bell, JS and Kearsley, MJ and Pitaevskii, LP and Lifshitz, EM and Sykes, JB},
@@ -1552,7 +1573,6 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2004},
   publisher={APS}
 }
-
 @article{agranovich1962crystal,
   title={Crystal optics with allowance for spatial dispersion; exciton theory},
   author={Agranovich, Vladimir M and Ginzburg, Vitalii L},
@@ -1563,13 +1583,40 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1962},
   publisher={IOP Publishing}
 }
-
 @article{skaar2014diamagnetism,
   title={Diamagnetism and the dispersion of the magnetic permeability},
   author={Skaar, Johannes and Dirdal, Christopher A},
   journal={arXiv preprint arXiv:1410.5999},
   year={2014}
 }
+@article{bungay1993equivalency,
+  title={Equivalency of the Casimir and the Landau-Lifshitz approaches to continuous-media electrodynamics and optical activity on reflection},
+  author={Bungay, AR and Svirko, Yu P and Zheludev, NI},
+  journal={Physical Review B},
+  volume={47},
+  number={18},
+  pages={11730},
+  year={1993},
+  publisher={APS}
+}
+@phdthesis{fietz2011homogenization,
+  title={Homogenization of metamaterials with spatial dispersion},
+  author={Fietz, Christopher Robin},
+  year={2011}
+}
+@article{sjoberg2005floquet,
+  title={A Floquet--Bloch Decomposition of Maxwell's Equations Applied to Homogenization},
+  author={Sj{\"o}berg, Daniel and Engstr{\"o}m, Christian and Kristensson, Gerhard and Wall, David JN and Wellander, Niklas},
+  journal={Multiscale Modeling \& Simulation},
+  volume={4},
+  number={1},
+  pages={149--171},
+  year={2005},
+  publisher={SIAM}
+}
+
+
+
 
 /*}}}*/
 
