--- a/theory.tex
+++ b/theory.tex
@@ -648,7 +648,16 @@ The waves propagating with the higher wavenumber $k$ are denoted as \textit{addi
 \paragraph{Odd expansion terms and optical activity }   %{{{ TODO
 Returning to the power expansion of $\epsLL(\omega, \kk)$ in terms of $k$ in Eq. (\ref{eq_epsmusd1}), we can identify the term constant in $k$ with the electric dipole moment $\chi_e(\omega)$, the term proportional to $k^2$ with the magnetic dipole moment $\chi_m(\omega)$ (or, also the electric quadrupole moment), and the recently discussed term proportional to $k^4$ with an electric octupole or magnetic quadrupole (\cite{agranovich2006spatial, agranovich2004linear, krowne2007book}).
 
-The odd terms were not discussed yet, although they have important physical meaning. Their nonzero values break the spatial inversion symmetry of the medium, and are related to optical activity. In media with nonzero odd terms
+The odd terms were not discussed yet, although they have important physical meaning. Their nonzero values break the spatial inversion symmetry of the medium, and are related to optical activity \cite{bungay1993equivalency}
+
+\todo{related: \cite{fietz2011homogenization}}
+
+
+
+
+
+
+. In media with nonzero odd terms
 , the eigenwaves are circularly polarized, and they propagate with different velocity, feeling opposite signs of the odd expansion terms. Thus, the two plots in the right column of Fig. \ref{fg_dcllactivity} can also be viewed as the dispersion curves of the same medium, for the left and right circularly polarized waves.
 
 \begin{figure}[t] \caption{Dispersion curves for two media with optical activity. The left and right columns of plots show the same information as in Figs. \ref{fg_dcll} and \ref{fg_dcll_nl}. The frequency dependence of the term $\gamma_e(\omega)$ that is linearly proportional to $k$ in the expansion (\ref{eq_epsmusd1}) is plotted in the left column as a thin red line. } \label{fg_dcllactivity} \centering  
@@ -845,6 +854,9 @@ The same arguments have to be valid also for the magnetic field $\HH(\rr)$, wher
 {\murl}^{-1 }(\omega,\rr) \nabla\times \left[{\epsrl}^{-1}(\omega,\rr) \nabla\times \HH(\rr)\right] = \frac{\omega^2}{c^2}\HH(\rr).   \label{eq_eigen_h}
 \end{equation}
 
+\todo{Elaborate mathematical treatise on this topic: \cite{sjoberg2005floquet}}
+%A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization
+
 %}}}
 \paragraph{Virtual periodicity and ambiguity of the mode function}%{{{
 \begin{figure}[ht] \caption{Folded and unfolded dispersion curves for free space and photonic crystal. The phase difference over an unit cell can be expressed either by the wavenumber $K$ (unfolded plots \textbf{a, b} above), or it can be partially absorbed into the periodic mode function $\mathbf{u}(\rr)$ (folded plots \textbf{c, d} below)\\
@@ -1030,9 +1042,14 @@ At the resonant frequencies in the metamaterials, the majority of the energy of 
 \todo{If so, would be MMs a very narrow, or very broad  group of structures?}
 
 
-\paragraph{Definition by purpose}
+\paragraph{Definition by purpose and way of thinking}
 
 -
+
+\cite{sihvola2009metamaterials}
+
+
+
 
 \add{MMs are about HOW the light propagates. PhCs are about WHETHER the light propagates.}
 
