--- a/theory.tex
+++ b/theory.tex
@@ -747,7 +747,7 @@ identified with the group velocity, $\vg$. However, this may be misleading, as i
 %In the author's view, it is rather a problematic term because a 
 Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), leads to a contradiction. From the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite-support has to span over an infinite spectrum. 
 A temporally limited optical pulse will be always more or less distorted upon propagation in dispersive medium, and the information velocity becomes a problematic term.
-Therefore, the author is convinced that \textit{information} velocity can not be directly identified with the group velocity. 
+Therefore, the author is convinced that the \textit{information velocity} is too vague unless its exact definition is provided, and should not be confused with the group velocity. 
 
 %}}}
 %% TODO \paragraph{Speed of light and causality in spatial-dispersive media}%{{{
