--- a/numeric.tex
+++ b/numeric.tex
@@ -545,7 +545,7 @@ The complex reflectance $r_{s}$ and transmittance $t_{s}$ of a homogeneous slab 
 
 \todo{add infinite sums for Fabry-Pérot resonances in a slab; develop expressions from Fresnel to effparam, and put into appendix?}
 Knowing the complex $r(f)$ and $t(f)$ along with the sample thickness $d$, we may use the
-classical algorithm \cite{smith2002determination} to retrieve the effective index of refraction:
+classical algorithm \cite{smith2002determination}\cite[pp. 51-55]{shalaev2010book} to retrieve the effective index of refraction:
 \begin{equation}
 	N_{\rm eff} = \frac{\pm \arccos\left(\frac{1 - r^2+t^2}{2 t}\right) + 2\pi \cdot m}{k d},
 \end{equation}
