--- a/result.tex
+++ b/result.tex
@@ -114,10 +114,11 @@ Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1
 \section{Metallic strips} % references to -> % note about plasmonic particles
 \section{Metallic strip pair} % references to ->
 \section{Split-ring resonator} % references to ->
-\section{Dielectric sphere} % references to ->
-%{{{
+\section{Dielectric sphere} % references to ->				%{{{
 \add{ Note: The reflection amplitude easily reaches 0.75 for the first resonance in a 40 um sphere in 70x70 um cell. This is obviously in contrast to the fact that its cross-section is only 1250 um2, whereas the crossection of the cell is 4900 um2. How is it possible? I think the explanation lies in that it is the sphere's near field that covers most of the cell's cross section. This also means that in the aforementioned geometry the resonant fields have to couple to fields in neighbouring spheres in the virtual periodic array. In the detailed view in Mayavi one can easily see that this indeed happens, but fortunately not too much to distort the spectra. (However, for a periodic array the mode splitting cannot be observed because also the fields are periodic in the cells.)
 }
+\add{The electromagnetic cross-section, given as the ratio of scattered power to the incident power density of an uniform plane wave, can be in the resonance much larger than the geometric cross-section of the sphere.  
+The scattering of a single sphere can be computed analytically: from mie.m, see http://atol.ucsd.edu/scatlib/index.htm, Bohren and Huffman originally published the code in their book on light scattering }
 \begin{figure} \caption{img/Sphere\_eps100\_R25\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/Sphere_eps100_R25_FDTD.pdf} \end{figure} 
 
 \begin{figure} \caption{\textbf{a)} The electric and \textbf{b)} magnetic Mie resonance in a dielectric sphere}  \centering \includegraphics[width=6cm]{img/sphere_Mie_mode_electric.pdf} 
